Test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: exam
  labels:
    app: exam-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exam-frontend
  template:
    metadata:
      labels:
        app: exam-frontend
    spec:
      containers:
      - name: client
        image: hub.mil.am/atmk-exam-local/client:1.0.1
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: local 





---



apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
  labels:
    app: exam-frontend
spec:
  selector:
    app: exam-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80



---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
  labels:
    app: exam-frontend
spec:
  selector:
    app: exam-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: exam
  labels:
    app: exam-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exam-backend
  template:
    metadata:
      labels:
        app: exam-backend
    spec:
      containers:
      - name: server
        image: hub.mil.am/atmk-exam-local/server:1.0.2
        ports:
        - containerPort: 80
        envFrom:
        - configMapRef:
            name: env-cm
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
      imagePullSecrets:
      - name: local




---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: exam
  labels:
    app: exam-backend
spec:
  selector:
    app: exam-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
